--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,15 +21,17 @@
 			
 			<div class="form-group">
 				<label for="username">username</label>
-				<input type="username" id="username" class="form-control" name="username" placeholder="username" required autofocus/>
+				<input type="username" id="username" class="form-control" name="username" placeholder="username"/>
 			</div>
 			
 			<div class="form-group">
 				<label for="password">password</label>
-				<input type="password" id="password" class="form-control" name="password" placeholder="password" required autofocus/>
+				<input type="password" id="password" class="form-control" name="password" placeholder="password"/>
 			</div>
 			<input type="submit" value="Sign in"></input>
+			
 		</form>
+		<a th:href="@{/registration}">Sign-up</a>
 	</div>
 	
 
