--- a/src/main/resources/templates/todaylist.html
+++ b/src/main/resources/templates/todaylist.html
@@ -11,14 +11,14 @@
 		<div th:insert="fragments/navbar :: navbar"></div>
 	
 		<h1 th:text="'Today is ' + ${date}"></h1>
-		<h2>Do</h2>
+		
 		<table class=" table table-striped">
 		
 			<tr>
+				<th>Do</th>
 				<th></th>
-				<th>Date</th>
-				<th>Time</th>
-				<th>Content</th>
+				<th></th>
+				<th></th>
 				<th></th>
 				<th></th>
 			</tr>
@@ -36,14 +36,13 @@
 			</tr>		
 		</table>
 		
-		<h2>Done</h2>
 		
 		<table class=" table table-striped">
 			<tr>
+				<th>Done</th>
 				<th></th>
-				<th>Date</th>
-				<th>Time</th>
-				<th>Content</th>
+				<th></th>
+				<th></th>
 				<th></th>
 				<th></th>
 			</tr>
