--- a/src/main/resources/templates/tomorrowlist.html
+++ b/src/main/resources/templates/tomorrowlist.html
@@ -12,8 +12,17 @@
 		<div th:insert="fragments/navbar :: navbar"></div>
 		<h1 th:text="'Tomorrow is ' + ${date}"></h1>
 	
-		<h2>Do</h2>
 		<table class=" table table-striped">
+		
+			<tr>
+				<th>Do</th>
+				<th></th>
+				<th></th>
+				<th></th>
+				<th></th>
+				<th></th>
+			</tr>
+			
 			<tr th:each="note : ${notesnotdone}">
 				<td th:text="${note.getDate()}"/>
 				<td th:text="${note.getTime()}"/>
@@ -23,9 +32,17 @@
 			</tr>
 		</table>
 		
-		<h2>Done</h2>
-		
 		<table class=" table table-striped">
+		
+			<tr>
+				<th>Done</th>
+				<th></th>
+				<th></th>
+				<th></th>
+				<th></th>
+				<th></th>
+			</tr>
+			
 			<tr th:each="note : ${notesdone}">
 				<td th:text="${note.getDate()}"/>
 				<td th:text="${note.getTime()}"/>
