added user info

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,9 +15,10 @@
 		<div th:if="${param.logout}">
 			You have been logged out
 		</div>
-	
+		
 		<form th:action="@{/login}" method="post">
 			<h2> Please sign in:</h2>
+			<p>try user/ user</p>
 			
 			<div class="form-group">
 				<label for="username">username</label>
